# xul-lang

./: .gitignore  Makefile  README  README.txt  package.yaml  xul-lang.cabal
bad/: bad_arg_count_1.xul  bad_arg_count_2.xul  bad_arg_count_3.xul  bad_loops_1.xul  bad_loops_2.xul  bad_main_1.xul  bad_main_2.xul  bad_main_3.xul  bad_types_0.xul  bad_types_10.xul  bad_types_2.xul  bad_types_3.xul  bad_types_5.xul  bad_types_6.xul  bad_types_7.xul  bad_types_9.xul  read_only.xul  redeclared_fun_1.xul  redeclared_fun_2.xul  redeclared_fun_3.xul  redeclared_var_1.xul  redeclared_var_2.xul  redeclared_var_3.xul  runtime_error_1.xul  runtime_error_2.xul  runtime_error_3.xul  runtime_error_4.xul  runtime_error_5.xul  syntax_error_1.xul  syntax_error_2.xul  syntax_error_3.xul  syntax_error_4.xul  syntax_error_5.xul  undeclared_fun.xul  undeclared_var_1.xul  undeclared_var_2.xul  undeclared_var_3.xul  undeclared_var_4.xul  undeclared_var_5.xul
good/: arg.xul  arithmetics.xul  big_example.xul  comparisons.xul  cond.xul  example.out  example.xul  functions.xul  loops.xul  loops_2.xul  print.xul  shadowing.xul  shadowing_1.xul  shadowing_2.xul  shadowing_3.xul  string.xul  types.xul
src/: Interpreter.hs  Main.hs  TypeChecker.hs  Xul.cf
