name:                xul-lang
version:             0.1.0.0
synopsis:            Xul programming language
homepage:            https://github.com/lraszkiewicz/xul-lang
author:              Åukasz Raszkiewicz
maintainer:          lraszkiewicz@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable xul-lang
  main-is:             Main.hs
  other-extensions:    CPP, MagicHash, FlexibleInstances, OverlappingInstances
  build-depends:       base >=4.8 && <4.9, array >=0.5 && <0.6, containers, mtl
  hs-source-dirs:      src, build_bnfc
  build-tools:         alex, happy
  default-language:    Haskell2010
  -- ghc-options:         -prof -fprof-auto -fprof-cafs
